--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI = "mongodb+srv://Hemanth:hemanth55@cluster0.p098ajq.mongodb.net/ScreenTime?retryWrites=true&w=majority"
+MONGODB_URI = "mongodb+srv://UserName:Password@cluster0.p098ajq.mongodb.net/ScreenTime?retryWrites=true&w=majority"
